# anime-sama-downloader-gui

./: README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: deploy.yml
src/gui/: daemon.py
src/gui/routers/: api.py  web.py
src/gui/static/: settings.css
src/gui/storage/: anime_data.py  config.py  downloaded_anime.py
src/gui/templates/: detail.html  settings.html
src/gui/utils/: cloudflare.py  logger.py  utils.py
src/utils/fetch/: planning.py
