[project]
name = "anime-sama-downloader-gui"
version = "0.1.1"
description = "A GUI made to program anime downloading"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "tqdm~=4.68.2",
    "requests~=2.34.2",
    "beautifulsoup4~=4.15.0",
    "av~=17.1.0",
    "pycryptodome~=3.23.0",
    "python-dotenv~=1.2.2",
    "fastapi~=0.137.0",
    "uvicorn~=0.49.0",
    "Jinja2~=3.1.6",
    "starlette>=1.3.1",
    "cachetools~=7.1.4",
    "python-multipart~=0.0.32",
    "APScheduler~=3.11.2"
]

[tool.bumpversion]
current_version = "0.1.1"
commit = false
tag = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
